# Federated-Machine-Learning

./: README.md
Federated Machine Learning XGboost/: .gitignore  SR_client_0  SR_client_1  USR_client_0  USR_client_1  client.py  client_app.py  client_logs  logfile  logfileHigs  logfile_client_0  logfile_client_1  my_client.py  my_server.py  my_test.py  pyproject.toml  server.py  successful_run_logfile  test.py  unsuccessful_run_logfile
Federated Machine Learning XGboost/FLOWER_MVP/: README  client.py  server.py
Federated Machine Learning XGboost/FLWR_FML/: clear_logs.py  client.py  requirements.txt  run_clients.py  run_federated.py  server.py
Federated Machine Learning XGboost/FML_MVP/: federated_xgboost.py  requirements.txt
Federated Machine Learning XGboost/FML_PySwift/: InstructionsToRun.txt  fridge.py  pyswift_federated.py
Federated Machine Learning XGboost/Flower_initial_implementation/: SR_client_1  my_client.py  my_server.py  my_task.py  my_test.py  server_app.py  successful_run_logfile  task.py
